# meshai

./: .dockerignore  .gitignore  Dockerfile  MEMORY_IMPLEMENTATION_GUIDE.md  MEMORY_README.md  MEMORY_RESEARCH.md  MEMORY_SUMMARY.md  PLAN.md  README.md  config.example.yaml  docker-compose.serial.yml  docker-compose.tcp.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
docs/: IMPLEMENTATION_DIFF.md  QUICK_REFERENCE.md  memory_approaches_comparison.txt
examples/: memory_comparison.py
meshai/: __init__.py  __main__.py  announcements.py  config.py  connector.py  history.py  log_setup.py  main.py  memory.py  personality.py  rate_limiter.py  responder.py  router.py  safety.py  web_status.py  webhook.py
meshai/backends/: __init__.py  anthropic_backend.py  base.py  fallback.py  google_backend.py  openai_backend.py
meshai/cli/: __init__.py  configurator.py
meshai/commands/: __init__.py  base.py  dispatcher.py  help.py  ping.py  reset.py  status.py  weather.py
